--- a/docs/src/styles/global.css
+++ b/docs/src/styles/global.css
@@ -6,7 +6,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
   background-color: #060606;
   color: #d0d6e0;
-  padding: 2rem;
+  padding: 1.5rem 3rem;
+  line-height: 1.4;
+  margin: 0;
 }
 
 a {
@@ -46,24 +48,24 @@ a {
 }
 
 
+.hero {
+  margin: 4rem 0 3rem 0;
+}
+
+
 .hero h1 {
-  font-size: 4rem;
-  line-height: 1.25;
-  margin: 2rem 0;
-  max-width: 80rem;
+  font-size: 4.25rem;
+  line-height: 1.1;
+  margin: 0;
+  max-width: 78rem;
 }
 
-.explanation {
+.text-section p {
   font-size: 1.5rem;
-  display: grid;
-  grid-template-columns: 20rem 1fr;
-  gap: 2rem;
 }
-
-
 
 .docs-fork {
-  font-size: 2rem;
+  margin: 2rem 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
@@ -74,9 +76,10 @@ a {
   background-color: #28292c;
 }
 
-.philosophy {
-  font-size: 1.5rem;
-  display: grid;
-  grid-template-columns: 1fr 20rem;
-  gap: 2rem;
+.docs-fork a:hover {
+  background-color: #414247;
+}
+
+.docs-fork a code {
+  font-size: 2rem;
 }
